--- a/GarciaMariaPablo/src/main/resources/templates/error.html
+++ b/GarciaMariaPablo/src/main/resources/templates/error.html
@@ -15,7 +15,7 @@
 
     <!-- En este no se puede importar por que las rutas son diferentes -->
     <!-- Icono Web -->
-    <link rel="shortcut icon" href="../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
+    <link rel="shortcut icon" href="../static/img/favicon.png" th:href="@{/img/favicon.png}" type="image/x-icon">
     <!-- Required Custom Css -->
     <link rel="stylesheet" href="../static/css/required.css" th:href="@{/css/required.css}">
 
