--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/errorMessage.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/errorMessage.html
@@ -1,4 +1,9 @@
-<div th:fragment="errorMessage" th:if="${error}" class="alert alert-danger d-flex align-items-center mb-4" role="alert">
-    <i class="bi bi-exclamation-triangle-fill me-2"></i>
-    <span th:text="${error}"></span>
+<div th:fragment="errorMessage" th:classappend="${error == null or error.isEmpty()} ? d-none : ''" class="alert alert-danger d-flex align-items-center mb-4" role="alert"
+    aria-live="assertive" aria-atomic="true">
+
+    <i class="bi bi-exclamation-triangle-fill me-2" aria-hidden="true"></i>
+    <div>
+        <strong class="visually-hidden">Error:</strong>
+        <span th:text="${error}" id="errorTextMessage">Se ha producido un error inesperado.</span>
+    </div>
 </div>
