--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/head.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/head.html
@@ -1,5 +1,5 @@
-<div th:fragment="head">
-        <!-- Bootstrap CSS -->
+<th:block th:fragment="head">
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
@@ -7,8 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Icono Web -->
-    <link rel="shortcut icon" href="../../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../static/img/favicon.png" th:href="@{/img/favicon.png}" type="image/x-icon">
 
     <!-- Required Custom Css -->
     <link rel="stylesheet" href="../../../static/css/required.css" th:href="@{/css/required.css}">
-</div>
+</th:block>
